--- a/api-server/package.json
+++ b/api-server/package.json
@@ -10,6 +10,7 @@
         "dotenv": "^10.0.0",
         "express": "4.17.1",
         "express-swagger-generator": "^1.1.17",
+        "express-validator": "^6.14.2",
         "fabric-ca-client": "2.2.4",
         "fabric-network": "2.2.3",
         "jsonwebtoken": "^8.5.1",
@@ -20,5 +21,7 @@
         "passport-jwt": "^4.0.0",
         "swagger-ui-express": "^4.1.6"
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "nodemon": "^2.0.19"
+    }
 }
