--- a/api-server/package.json
+++ b/api-server/package.json
@@ -17,6 +17,7 @@
         "log4js": "^6.3.0",
         "moment": "^2.29.1",
         "mongoose": "^5.12.15",
+        "nodemailer": "^6.7.8",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "swagger-ui-express": "^4.1.6"
