--- a/api-server/package.json
+++ b/api-server/package.json
@@ -21,7 +21,8 @@
         "nodemailer": "^6.7.8",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
-        "swagger-ui-express": "^4.1.6"
+        "swagger-ui-express": "^4.1.6",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.19"
